--- a/public/index.html
+++ b/public/index.html
@@ -9,15 +9,41 @@
 </head>
 
 <body>
-    <div >
-    	<ul id='nicknames'>
-    		
-    	</ul>
+
+    <div id="instruments">
+        <button id="play_1">
+            Play me 1
+        </button>
+        <button id="play_2">
+            Play me 2
+        </button>
+        <button id="play_3">
+            Play me 3
+        </button>
+        <button id="play_4">
+            Play me 4
+        </button>
     </div>
+
+    <div>
+        <ul id='nicknames'>
+
+        </ul>
+    </div>
+
+    <section id="sp">
+        <div id="pad1" data-sound="kick.wav"></div>
+        <div id="pad2" data-sound="snare.wav"></div>
+        <div id="pad3" data-sound="tin.wav"></div>
+        <div id="pad4" data-sound="hat.wav"></div>
+    </section>
+
     <div id='whiteboard'> </div>
 
     <script src="https://cdn.socket.io/socket.io-1.3.3.js"></script>
     <script src="//code.jquery.com/jquery-1.11.2.min.js"></script>
+    <script src="/js/thirdParty/band.min.js"></script>
+    <script src="/js/audio.js"></script>
     <script src="/js/main.js"></script>
 </body>
 
