Add wad audio library, fixed location

--- a/public/index.html
+++ b/public/index.html
@@ -31,18 +31,11 @@
         </ul>
     </div>
 
-    <section id="sp">
-        <div id="pad1" data-sound="kick.wav"></div>
-        <div id="pad2" data-sound="snare.wav"></div>
-        <div id="pad3" data-sound="tin.wav"></div>
-        <div id="pad4" data-sound="hat.wav"></div>
-    </section>
-
     <div id='whiteboard'> </div>
 
     <script src="https://cdn.socket.io/socket.io-1.3.3.js"></script>
     <script src="//code.jquery.com/jquery-1.11.2.min.js"></script>
-    <script src="/js/thirdParty/band.min.js"></script>
+    <script src="/js/thirdParty/wad-min.js"></script>
     <script src="/js/audio.js"></script>
     <script src="/js/main.js"></script>
 </body>
