--- a/public/index.html
+++ b/public/index.html
@@ -36,8 +36,10 @@
     <script src="https://cdn.socket.io/socket.io-1.3.3.js"></script>
     <script src="//code.jquery.com/jquery-1.11.2.min.js"></script>
     <script src="/js/thirdParty/wad-min.js"></script>
+    <script src="/js/thirdParty/dat.gui.min.js"></script>
     <script src="/js/audio.js"></script>
     <script src="/js/main.js"></script>
+    <script src="/js/gui.js"></script>
 </body>
 
 </html>
